--- a/tmux.conf
+++ b/tmux.conf
@@ -1,14 +1,20 @@
+set -g history-limit 5000
 set -g default-terminal "screen-256color"
-set-option -g prefix C-a
+set -g prefix C-a
 bind-key a send-prefix
 bind-key -n C-l clear-history \; send-keys -R
 
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+set -sg escape-time 0
+set -g default-command "reattach-to-user-namespace -l zsh"
+# Vim style navigation in copy mode
 setw -g mode-keys vi
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+
+# Bind ']' to use pbbaste
+bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
+
 
 bind h select-pane -L
 bind j select-pane -D
@@ -23,3 +29,4 @@ bind - resize-pane -D 10
 bind + resize-pane -U 10
 
 source /usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
+
