--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,9 @@
 # powerline
 set-option -g status on
+# use UTF8
+set -g utf8
+set-window-option -g utf8 on
+
 set-option -g status-interval 2
 set-option -g status-justify "centre"
 set-option -g status-left-length 60
