--- a/tmux.conf
+++ b/tmux.conf
@@ -1,8 +1,10 @@
 # powerline
 set-option -g status on
 # use UTF8
-set -g utf8
-set-window-option -g utf8 on
+# set -g utf8 # deprecated?
+# set-window-option -g utf8 on
+
+set -g mouse on
 
 set-option -g status-interval 2
 set-option -g status-justify "centre"
@@ -34,7 +36,7 @@ setw -g mode-keys vi
 bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
 # bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "pbcopy"
-bind-key -T copy-mode C-\ send-keys -X copy-pipe-and-cancel "pbcopy"
+# bind-key -T copy-mode C-\ send-keys -X copy-pipe-and-cancel "pbcopy"
 
 # Bind ']' to use pbbaste
 # bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
@@ -60,11 +62,11 @@ bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
 bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
 bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
-bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+# bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l" #deprecated?
 bind-key -T copy-mode-vi C-h select-pane -L
 bind-key -T copy-mode-vi C-j select-pane -D
 bind-key -T copy-mode-vi C-k select-pane -U
 bind-key -T copy-mode-vi C-l select-pane -R
-bind-key -T copy-mode-vi C-\ select-pane -l
+# bind-key -T copy-mode-vi C-\ select-pane -l
 
 
