add tmux binding to reorder windows

--- a/tmux.conf
+++ b/tmux.conf
@@ -21,8 +21,9 @@ bind-key a send-prefix
 bind-key -n C-l clear-history \; send-keys -R
 
 # quick pane cycling
-unbind ^A
-bind ^A select-pane -t :.+
+# don't need this since I have the C-hjkl
+# unbind ^A
+# bind ^A select-pane -t :.+
 
 # force a reload of the config file
 unbind r
@@ -70,3 +71,6 @@ bind-key -T copy-mode-vi C-l select-pane -R
 # bind-key -T copy-mode-vi C-\ select-pane -l
 
 
+# swap window to left or right
+bind-key -r < swap-window -t -1
+bind-key -r > swap-window -t +1
