--- a/tmux.conf
+++ b/tmux.conf
@@ -11,16 +11,17 @@ set -g default-terminal screen-256color
 # set-option -g default-command "reattach-to-user-namespace -l bash"
 
 # vi mode
-set-window-option -g mode-keys vi
+setw -g mode-keys vi
 
 # if run as "tmux attach", create a session if one does not already exist
 # new-session -n $HOST
 
 # Enable mouse
-set -g mode-mouse on
-setw -g mouse-resize-pane on
-setw -g mouse-select-window on
-setw -g mouse-select-pane on
+set -g mouse # this is suppose to work for the below, but only worked for zsh after putting the individual options. seems to have fixed copy paste as well (what??)
+# set -g mode-mouse on
+# setw -g mouse-resize-pane on
+# setw -g mouse-select-window on
+# setw -g mouse-select-pane on
 
 # vi-like visual copy doesn't work
 # bind-key -t vi-copy 'v' begin-selection
@@ -39,11 +40,13 @@ bind a send-prefix
 
 #hsplit
 unbind '"'
-bind | split-window -h -c "#{pane_current_path}"
+# bind | split-window -h -c "#{pane_current_path}"
+bind | split-window -h
 
 #vsplit
 unbind %
-bind - split-window -v -c "#{pane_current_path}"
+# bind - split-window -v -c "#{pane_current_path}"
+bind - split-window -v
 
 # bind c new-window -c "#{pane_current_path}" \; split-window -h -c "#{pane_current_path}" \; select-pane -L
 
@@ -55,14 +58,28 @@ bind - split-window -v -c "#{pane_current_path}"
 # set-option -g message-bg black #base02
 # set-option -g message-fg brightred #orange
 
+# Smart pane switching with awareness of Vim splits.
+# See: https://github.com/christoomey/vim-tmux-navigator
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
+bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
+bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
+bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
+# bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l" #deprecated?
+bind-key -T copy-mode-vi C-h select-pane -L
+bind-key -T copy-mode-vi C-j select-pane -D
+bind-key -T copy-mode-vi C-k select-pane -U
+bind-key -T copy-mode-vi C-l select-pane -R
+# bind-key -T copy-mode-vi C-\ select-pane -l
 # smart pane switching with awareness of vim splits
-bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
-bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
-bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
-bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
-bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
+# bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
+# bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
+# bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
+# bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
+# bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
 
-bind C-l send-keys 'C-l'
+# bind C-l send-keys 'C-l'
 
 # shortcuts
 bind - split-window -l 20 -c "#{pane_current_path}"
@@ -71,7 +88,7 @@ bind _ split-window -l 20 -c "#{pane_current_path}" node
 # ----------------------
 # Status Bar
 # -----------------------
-set-option -g status on                # turn the status bar on
+# set-option -g status on                # turn the status bar on
 # set -g status-utf8 on                  # set utf-8 for the status bar
 set -g status-interval 2               # set update frequencey (default 15 seconds)
 set -g status-justify centre           # center window list for clarity
@@ -91,7 +108,7 @@ set -g status-justify centre           # center window list for clarity
 # select-pane -L
 
 # control automatic window renaming, not sure why I need this now for it to work (didn't in my old conf)
-setw -g automatic-rename
+# setw -g automatic-rename
 
 # list all paste buffers (default key is '#') TODO??
 # bind-key b list-buffers
@@ -125,10 +142,10 @@ bind space select-pane -t:.+
 
 # window title
 # enable wm window titles
-set-option -g set-titles on
+# set-option -g set-titles on
 
 # wm window title string (uses statusbar variables)
-set-option -g set-titles-string '#S:#I.#P #W' # window number,program name,active (or not)
+# set-option -g set-titles-string '#S:#I.#P #W' # window number,program name,active (or not)
 
 
 # Patch for OS X pbpaste and pbcopy under tmux.
@@ -170,6 +187,7 @@ bind C-a last-window
 
 # Bigger history
 set -g history-limit 10000
+# set -g history-limit 5000
 # Reload key
 unbind r
 bind r source-file ~/.tmux.conf
@@ -181,7 +199,7 @@ bind-key -r > swap-window -t +1
 # set -g default-command /usr/local/bin/fish
 # set -g default-shell /usr/local/bin/fish
 
-## COLORSCHEME: gruvbox dark see https://github.com/egel/tmux-gruvbox/blob/master/tmux-gruvbox-dark.conf
+# COLORSCHEME: gruvbox dark see https://github.com/egel/tmux-gruvbox/blob/master/tmux-gruvbox-dark.conf
 set-option -g status on
 
 # default statusbar color
@@ -224,7 +242,8 @@ set-option -g status-right-style none
 set-option -g status-right-length "80"
 set-window-option -g window-status-separator ""
 
-set-option -g status-left "#[fg=colour248, bg=colour241] #(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD) #[fg=colour241, bg=colour237, nobold, noitalics, nounderscore]"
+#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD) 
+set-option -g status-left "#[fg=colour248, bg=colour241] omg #[fg=colour241, bg=colour237, nobold, noitalics, nounderscore]"
 set-option -g status-right "#[fg=colour239, bg=colour237, nobold, nounderscore, noitalics]#[fg=colour246,bg=colour239] %A %m-%d-%y  %I:%M%p #[fg=colour248, bg=colour239, nobold, noitalics, nounderscore]#[fg=colour237, bg=colour248] #h "
 
 set-window-option -g window-status-current-format "#[fg=colour237, bg=colour214, nobold, noitalics, nounderscore]#[fg=colour239, bg=colour214] #I #[fg=colour239, bg=colour214, bold] #W #[fg=colour214, bg=colour237, nobold, noitalics, nounderscore]"
