moar bloat and a kitty

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -15,11 +15,14 @@
     "css",
     "markdown"
   ],
-  "eslint.filetypes": [ // needed?
+  "eslint.filetypes": [
+    // needed?
     "javascript",
     "json",
     "typescript",
     "typescriptreact",
     "javascriptreact"
-  ]
+  ],
+  "git.addGBlameToVirtualText": true,
+  "git.enableGutters": false
 }
