Move all kitty conf, fix ctrl-k toggle kitty in spacehammer

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -8,9 +8,9 @@
 # bold_font Operator Mono Thick
 # bold_italic_font Operator Mono Medium
 # font_family      Input Mono
-font_family      FiraCode Nerd Font
+font_family      Fantasque Sans Mono Regular
 italic_font      auto
-bold_font        auto
+bold_font        Fantasque Sans Mono Bold
 bold_italic_font auto
 
 # Font size (in pts)
@@ -223,6 +223,9 @@ map ctrl+shift+up      increase_font_size
 map ctrl+shift+down    decrease_font_size
 map ctrl+shift+backspace restore_font_size
 
+map ctrl+shift+\ launch --location=vsplit
+map ctrl+shift+r layout_action rotate # doesn't work?
+
 # Symbol mapping (special font for specified unicode code points). Map the
 # specified unicode codepoints to a particular font. Useful if you need special
 # rendering for some symbols, such as for Powerline. Avoids the need for
@@ -255,3 +258,8 @@ map ctrl+alt+t goto_layout tall
 map ctrl+alt+s goto_layout stack
 
 include ./kitty-themes/gruvbox_dark.conf
+
+map ctrl+j kitten ./kittens/pass_keys.py neighboring_window bottom ctrl+j
+map ctrl+k kitten ./kittens/pass_keys.py neighboring_window top    ctrl+k
+map ctrl+h kitten ./kittens/pass_keys.py neighboring_window left   ctrl+h
+map ctrl+l kitten ./kittens/pass_keys.py neighboring_window right  ctrl+l
