mostly more kitty

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,6 +1,6 @@
 {
   "javascript": {
-    "showUnused": true
+    "showUnused": true // not working?
   },
   "prettier": {
     "eslintIntegration": true,
