--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -50,6 +50,7 @@ scrollback_lines 6000
 # handle ANSI escape sequences for colors and text formatting.
 scrollback_pager less +G -R
 
+
 # Wheel scroll multiplier (modify the amount scrolled by the mouse wheel)
 wheel_scroll_multiplier 5.0
 
@@ -87,7 +88,7 @@ map ctrl+shift+m toggle_maximized
 # repaint_delay    10
 repaint_delay    10
 
-draw_minimal_borders no
+draw_minimal_borders yes
 
 # Delay (in milliseconds) before input from the program running in the terminal
 # is processed. Note that decreasing it will increase responsiveness, but also
@@ -114,12 +115,14 @@ open_url_with default
 term xterm-kitty
 
 # The width (in pts) of window borders. Will be rounded to the nearest number of pixels based on screen resolution.
-window_border_width 0
+# window_border_width 1.0
+active_border_color #00ff00
 
-window_margin_width 15
+window_margin_width 0
+# window_padding_width 15
 
 # The color for the border of the active window
-active_border_color #ffffff
+# active_border_color #ffffff
 
 # The color for the border of inactive windows
 inactive_border_color #cccccc
@@ -129,7 +132,10 @@ active_tab_foreground #000
 active_tab_background #eee
 inactive_tab_foreground #444
 inactive_tab_background #999
+active_tab_font_style bold-italic
 
+tab_bar_style powerline
+tab_title_template "{index}: {title}"
 
 # The 16 terminal colors. There are 8 basic colors, each color has a dull and
 # bright version.
@@ -166,6 +172,7 @@ color14  #84edb9
 color7   #c0b18b
 color15  #d8d8d8
 
+
 # Key mapping
 # For a list of key names, see: http://www.glfw.org/docs/latest/group__keys.html
 # For a list of modifier names, see: http://www.glfw.org/docs/latest/group__mods.html
@@ -179,28 +186,25 @@ map super+c             copy_to_clipboard
 map shift+insert        paste_from_selection
 
 # Scrolling
-map ctrl+shift+up        scroll_line_up
-map ctrl+shift+down      scroll_line_down
+# map ctrl+shift+up        scroll_line_up
+# map ctrl+shift+down      scroll_line_down
 map ctrl+shift+k         scroll_line_up
 map ctrl+shift+j         scroll_line_down
-map ctrl+shift+page_up   scroll_page_up
-map ctrl+shift+page_down scroll_page_down
+map ctrl+shift+b   scroll_page_up # like vim but w extra shift
+map ctrl+shift+f scroll_page_down
 map ctrl+shift+home      scroll_home
-map ctrl+shift+end       scroll_end
-map ctrl+shift+h         show_scrollback
+map ctrl+shift+g       scroll_end
+map ctrl+a>[         show_scrollback
 
 # Window management
 map super+n             new_os_window
 map super+w             close_window
 map ctrl+shift+enter    new_window
-map ctrl+shift+]        next_window
-map ctrl+shift+[        previous_window
+# map ctrl+shift+]        next_window
+# map ctrl+shift+[        previous_window
 map ctrl+shift+f        move_window_forward
 map ctrl+shift+b        move_window_backward
 map ctrl+shift+`        move_window_to_top
-map ctrl+shift+1        first_window
-map ctrl+shift+2        second_window
-map ctrl+shift+3        third_window
 map ctrl+shift+4        fourth_window
 map ctrl+shift+5        fifth_window
 map ctrl+shift+6        sixth_window
@@ -208,6 +212,7 @@ map ctrl+shift+7        seventh_window
 map ctrl+shift+8        eighth_window
 map ctrl+shift+9        ninth_window
 map ctrl+shift+0        tenth_window
+map ctrl+shift+r        start_resizing_window
 
 # Tab management
 map ctrl+shift+right    next_tab
@@ -217,6 +222,11 @@ map ctrl+shift+q        close_tab
 map ctrl+shift+l        next_layout
 map ctrl+shift+.        move_tab_forward
 map ctrl+shift+,        move_tab_backward
+map ctrl+shift+1        goto_tab 1
+map ctrl+shift+2        goto_tab 2
+map ctrl+shift+3        goto_tab 3
+map ctrl+shift+n        goto_tab -1
+# map ctrl>a>ctrl>a       goto_tab -1
 
 # Miscellaneous
 map ctrl+shift+up      increase_font_size
@@ -247,6 +257,8 @@ macos_option_as_alt no
 # the default background color and finally you can use an arbitrary color, such
 # as #12af59 or "red".
 macos_titlebar_color background
+
+macos_thicken_font 0.2
 
 allow_remote_control yes
 
