updates, remove lc url

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -24,5 +24,6 @@
     "javascriptreact"
   ],
   "git.addGBlameToVirtualText": true,
+  "git.addGBlameToBufferVar": true,
   "git.enableGutters": false
 }
