--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -116,13 +116,13 @@ term xterm-kitty
 
 # The width (in pts) of window borders. Will be rounded to the nearest number of pixels based on screen resolution.
 # window_border_width 1.0
-active_border_color #00ff00
+# active_border_color #00ff00
 
 window_margin_width 0
 # window_padding_width 15
 
 # The color for the border of the active window
-# active_border_color #ffffff
+active_border_color #ffffff
 
 # The color for the border of inactive windows
 inactive_border_color #cccccc
@@ -225,6 +225,7 @@ map ctrl+shift+,        move_tab_backward
 map ctrl+shift+1        goto_tab 1
 map ctrl+shift+2        goto_tab 2
 map ctrl+shift+3        goto_tab 3
+map ctrl+shift+4        goto_tab 4
 map ctrl+shift+n        goto_tab -1
 # map ctrl>a>ctrl>a       goto_tab -1
 
