add cross sh aliases, use nord themes as default, play with surfingkeys

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -270,9 +270,17 @@ map ctrl+shift+l next_layout
 map ctrl+alt+t goto_layout tall
 map ctrl+alt+s goto_layout stack
 
-include ./kitty-themes/gruvbox_dark.conf
+# include ./kitty-themes/gruvbox_dark.conf
+# to try: birdsofparadise, flat, funforrest(maybe), later this evening, material dark, mona
+# lisa, notch2k, solarized darcula
+include ./kitty-themes/themes/Norde.conf
+# include ./kitty-themes/themes/MaterialDark.conf
 
 map ctrl+j kitten ./kittens/pass_keys.py neighboring_window bottom ctrl+j
 map ctrl+k kitten ./kittens/pass_keys.py neighboring_window top    ctrl+k
 map ctrl+h kitten ./kittens/pass_keys.py neighboring_window left   ctrl+h
 map ctrl+l kitten ./kittens/pass_keys.py neighboring_window right  ctrl+l
+
+# TODO not working even w simple regex :( whyy
+# copy jira ticket to clipboard
+map ctrl+shift+p>j kitten hints --type=regex --regex=[A-Z]{3,4}-\d{6,} --alphabet=asdfghjkl; --program=@
