Updates, mostly more fzf and cocgit/fugitive vimrc workflow

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -4,6 +4,7 @@
   },
   "prettier": {
     "eslintIntegration": true,
+    "tslintIntegration": true,
     "stylelintIntegration": true
   },
   "coc.preferences.formatOnSaveFiletypes": [
