--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -265,6 +265,7 @@ allow_remote_control yes
 
 # Next layout
 map ctrl+shift+l next_layout
+map ctrl+shift+d detach
 
 # You can also create shortcuts to switch to specific layouts:
 map ctrl+alt+t goto_layout tall
