fix kitty vim navigator and try at install sh

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -262,8 +262,10 @@ macos_titlebar_color background
 macos_thicken_font 0.2
 
 allow_remote_control yes
+single_instance yes
+listen_on unix:/tmp/mykitty
 
-# Next layout
+# Next layout - use to change from horiz to vert if 2 window panes (ctrl shift enter or |)
 map ctrl+shift+l next_layout
 map ctrl+shift+d detach
 
@@ -277,10 +279,10 @@ map ctrl+alt+s goto_layout stack
 include ./kitty-themes/themes/Nord.conf
 # include ./kitty-themes/themes/MaterialDark.conf
 
-map ctrl+j kitten ./kittens/pass_keys.py neighboring_window bottom ctrl+j
-map ctrl+k kitten ./kittens/pass_keys.py neighboring_window top    ctrl+k
-map ctrl+h kitten ./kittens/pass_keys.py neighboring_window left   ctrl+h
-map ctrl+l kitten ./kittens/pass_keys.py neighboring_window right  ctrl+l
+map ctrl+j kitten pass_keys.py neighboring_window bottom ctrl+j
+map ctrl+k kitten pass_keys.py neighboring_window top    ctrl+k
+map ctrl+h kitten pass_keys.py neighboring_window left   ctrl+h
+map ctrl+l kitten pass_keys.py neighboring_window right  ctrl+l
 
 # TODO not working even w simple regex :( whyy
 # copy jira ticket to clipboard
