more fixes and working coc

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -276,7 +276,7 @@ map ctrl+alt+s goto_layout stack
 # include ./kitty-themes/gruvbox_dark.conf
 # to try: birdsofparadise, flat, funforrest(maybe), later this evening, material dark, mona
 # lisa, notch2k, solarized darcula
-include ./kitty-themes/themes/Nord.conf
+include ./kitty-themes/Nord.conf
 # include ./kitty-themes/themes/MaterialDark.conf
 
 map ctrl+j kitten pass_keys.py neighboring_window bottom ctrl+j
