--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -195,6 +195,7 @@ map ctrl+shift+f scroll_page_down
 map ctrl+shift+home      scroll_home
 map ctrl+shift+g       scroll_end
 map ctrl+a>[         show_scrollback
+# or ctrl+shift+h i spose
 
 # Window management
 map super+n             new_os_window
