--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -14,7 +14,7 @@ bold_font        Fantasque Sans Mono Bold
 bold_italic_font auto
 
 # Font size (in pts)
-font_size        14.0
+font_size        18.0
 
 # The foreground color
 foreground       #c0b18b
@@ -284,6 +284,11 @@ map ctrl+j kitten pass_keys.py neighboring_window bottom ctrl+j
 map ctrl+k kitten pass_keys.py neighboring_window top    ctrl+k
 map ctrl+h kitten pass_keys.py neighboring_window left   ctrl+h
 map ctrl+l kitten pass_keys.py neighboring_window right  ctrl+l
+
+# better ctrl f? https://github.com/kovidgoyal/kitty/issues/718 but takes over ctrl f, find another shortcut
+# map ctrl+f launch --type=overlay --stdin-source=@screen_scrollback /usr/local/bin/fzf --no-sort --no-mouse --exact -i
+# map ctrl+f launch --type=overlay --stdin-source=@screen_scrollback /bin/sh -c "/opt/homebrew/bin/fzf --no-sort --no-mouse --exact -i --tac | kitty +kitten clipboard" # this copies any selection to clipboard, super inconvenient
+
 
 # TODO not working even w simple regex :( whyy
 # copy jira ticket to clipboard
